--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node main.js"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
